# Smart-Transit

./: CMakeLists.txt  main.cpp
include/controllers/: AppController.h  AuthController.h  DataManager.h  DispatchController.h  FileController.h  FleetController.h  IncidentController.h  MaintenanceController.h  PaymentController.h  ReportController.h  RouteController.h  StaffController.h  TicketingController.h  TripController.h
include/entities/: AdminUser.h  ArticulatedBus.h  CashProcessor.h  ChargingStation.h  CityBus.h  Conductor.h  CorporateAccountProcessor.h  Dispatcher.h  DisplayBoardNotifier.h  Driver.h  DriverPerformanceReport.h  ElectricScooter.h  EmailNotifier.h  EmissionsReport.h  Entity.h  FlatFareBus.h  FleetUtilisationReport.h  FreightTruck.h  FuelLog.h  HighSpeedTrain.h  IFareCalculator.h  INotifiable.h  IPaymentProcessor.h  IReportGenerator.h  Incident.h  IncidentReport.h  LoyaltyPointsProcessor.h  MaintenanceJob.h  MaintenanceTech.h  MetroTrain.h  MicroMobility.h  Passenger.h  Person.h  PushNotifier.h  QRCodeProcessor.h  RefrigeratedTruck.h  RevenueReport.h  RideHailCar.h  Route.h  RouteEfficiencyReport.h  (+12 more)
include/exceptions/: CargoExceptions.h  ContainerException.h  FileException.h  PaymentException.h  PaymentTicketExceptions.h  RouteException.h  RouteTripExceptions.h  StaffException.h  SystemExceptions.h  TicketException.h  TransitException.h  TripException.h  ValidationContainerExceptions.h  ValidationException.h  VehicleExceptions.h
include/utilities/: CustomDate.h  CustomString.h  CustomTime.h  GeoCoordinate.h
src/controllers/: AppController.cpp  AuthController.cpp  DataManager.cpp  DispatchController.cpp  FileController.cpp  FleetController.cpp  IncidentController.cpp  MaintenanceController.cpp  PaymentController.cpp  ReportController.cpp  RouteController.cpp  StaffController.cpp  TicketingController.cpp  TripController.cpp
src/entities/: AdminUser.cpp  ArticulatedBus.cpp  CashProcessor.cpp  ChargingStation.cpp  CityBus.cpp  Conductor.cpp  CorporateAccountProcessor.cpp  Dispatcher.cpp  DisplayBoardNotifier.cpp  Driver.cpp  DriverPerformanceReport.cpp  ElectricScooter.cpp  EmailNotifier.cpp  EmissionsReport.cpp  Entity.cpp  FlatFareBus.cpp  FleetUtilisationReport.cpp  FreightTruck.cpp  FuelLog.cpp  HighSpeedTrain.cpp  Incident.cpp  IncidentReport.cpp  LoyaltyPointsProcessor.cpp  MaintenanceJob.cpp  MaintenanceTech.cpp  MetroTrain.cpp  MicroMobility.cpp  Passenger.cpp  Person.cpp  PushNotifier.cpp  QRCodeProcessor.cpp  RefrigeratedTruck.cpp  RevenueReport.cpp  RideHailCar.cpp  Route.cpp  RouteEfficiencyReport.cpp  SMSNotifier.cpp  SeniorDriver.cpp  StaffMember.cpp  Stop.cpp  (+8 more)
src/exceptions/: TransitException.cpp
src/gui/: DispatchConsoleWindow.cpp  DispatchConsoleWindow.h  FleetManagementWindow.cpp  FleetManagementWindow.h  LiveMapWindow.cpp  LiveMapWindow.h  LoginWindow.cpp  LoginWindow.h  MainDashboardWindow.cpp  MainDashboardWindow.h  MaintenanceWindow.cpp  MaintenanceWindow.h  ReportDashboardWindow.cpp  ReportDashboardWindow.h  RouteBuilderWindow.cpp  RouteBuilderWindow.h  StaffManagementWindow.cpp  StaffManagementWindow.h  TicketingWindow.cpp  TicketingWindow.h  TripSchedulerWindow.cpp  TripSchedulerWindow.h
src/utilities/: CustomDate.cpp  CustomString.cpp  CustomString.h  CustomTime.cpp  GeoCoordinate.cpp
